data/derived/sp14/progs/unify/prog2192.ml.out
Characters 0-1:
  x.[3];;
  ^
Error: This expression has type int but an expression was expected of type
         string
